<resources>
    <string name="app_name">Actividad</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="btnLogin">Login</string>
    <string name="etCorreo">Correo</string>
    <string name="etPass">Contraseña</string>
    <string name="btnGoogle">Login Google</string>
    <string name="etTitulo">Bienvenido</string>
    <string name="etNombrePrin"></string>
    <string name="btnCamera">Tomar Foto</string>
    <string name="btnDiario">Ver tu actividad</string>
    <string name="btnEjercicio">Programar Tarea</string>
    <string name="etNombreRecycler">Nombre</string>
    <string name="etTarea">Tarea</string>
    <string name="btnGuardar">Guardar</string>
    <string name="BtnVolver">Volver</string>
    <string name="etMinutosActividad">Minutos:</string>
    <string name="etMinutos">Minutos Totales:</string>
    <string name="actividadGuardar">Actividad guardada con exito</string>
    <string name="btnTomar">Hacer foto</string>
    <string name="itAbout">About Us...</string>
    <string name="info">App creada por Carlos Carrasco Ureña</string>
    <string name="btnTareaNo">Ver Tarea\n(Modo sin conexion)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
