<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gymback"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/etCorreo"
        android:inputType="textPersonName"
        android:textColor="#1117E1"
        android:textColorHint="#1117E1" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/etPass"
        android:inputType="textPassword"
        android:textColor="#1117E1"
        android:textColorHint="#1117E1" />

    <Button
        android:id="@+id/button"
        style="@style/botonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="login"
        android:text="@string/btnLogin"
        android:textColor="#1117E1"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        style="@style/botonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="registrar"
        android:text="@string/btnRegistrar"
        android:textColor="#1117E1"
        android:textSize="18dp"
        android:textStyle="bold" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogle"
        style="@style/botonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />
</LinearLayout>