<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:paddingStart="5dp"
        android:text="@string/etTitulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/frNombre"
        android:name="org.alandalus.Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout="@layout/fragment_nombre" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frNombre">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                style="@style/botonMenu"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                app:srcCompat="@drawable/ic_weight_lifter_black_48dp" />

            <Button
                android:id="@+id/btnTarea"
                style="@style/botonMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:onClick="tarea"
                android:text="@string/btnEjercicio" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                style="@style/botonMenu"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                app:srcCompat="@drawable/ic_camera_alt_black_24dp" />

            <Button
                android:id="@+id/btnGimnasio"
                style="@style/botonMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:onClick="camara"
                android:text="@string/btnCamera" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                style="@style/botonMenu"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                app:srcCompat="@drawable/ic_fitness_center_black_24dp" />

            <Button
                android:id="@+id/btnDiario"
                style="@style/botonMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:onClick="actividad"
                android:text="@string/btnDiario" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFlotador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        app:backgroundTint="@color/design_default_color_secondary_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_exit_to_app_black_24dp" />

    <TextView
        android:id="@+id/etNombrePrin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>